<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ReceiptFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/receipt_fragment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/receipt_title"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/receipt_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="@dimen/title_size" />

                <ImageView
                    android:id="@+id/shared_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/share_image_description"
                    android:src="@android:color/transparent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/order_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_layout_margin"
                    android:layout_marginTop="@dimen/small_layout_margin"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/done_button" />

            </LinearLayout>
        </ScrollView>
</layout>